Update application