@@ -1,117 +1,147 @@
 package com.joshi.twitterclone.service;
 
-import com.joshi.twitterclone.model.Conversation;
-import com.joshi.twitterclone.model.User;
+import java.time.LocalDateTime;
+import java.util.List;
+import java.util.stream.Collectors;
+
+import org.springframework.http.HttpStatus;
+import org.springframework.stereotype.Service;
+import org.springframework.web.server.ResponseStatusException;
+
 import com.joshi.twitterclone.model.events.EventBooking;
-import com.joshi.twitterclone.model.events.EventBookingStatus;
 import com.joshi.twitterclone.model.events.EventListing;
 import com.joshi.twitterclone.model.marketplace.ListingStatus;
 import com.joshi.twitterclone.repository.events.EventBookingRepository;
 import com.joshi.twitterclone.repository.events.EventListingRepository;
+
 import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
-import org.springframework.http.HttpStatus;
-import org.springframework.stereotype.Service;
-import org.springframework.web.multipart.MultipartFile;
-import org.springframework.web.server.ResponseStatusException;
 
-import java.math.BigDecimal;
-import java.time.LocalDate;
-import java.time.LocalDateTime;
-import java.util.List;
-import java.util.UUID;
-
-@Slf4j
 @Service
 @RequiredArgsConstructor
 public class EventService {
 
     private final EventListingRepository eventListingRepository;
     private final EventBookingRepository eventBookingRepository;
-    private final UserService userService;
-    private final DirectMessageService directMessageService;
-    private final FileStorageService fileStorageService;
+    private final NotificationService notificationService;
 
-    public EventListing createEvent(String username, EventListing event, MultipartFile banner) {
-        User user = userService.getUserByUsername(username);
-
-        event.setOrganizerUsername(user.getUsername());
-        event.setOrganizerDisplayName(user.getDisplayName());
-        event.setStatus(ListingStatus.APPROVED);
-        event.setBookedSeats(0);
-        event.setCreatedAt(LocalDateTime.now());
-
-        if (banner != null && !banner.isEmpty()) {
-            event.setBannerImageUrl(fileStorageService.saveImageOptimized(banner));
-        }
-
-        return eventListingRepository.save(event);
+    public List<EventListing> getAllEvents() {
+        return eventListingRepository.findAll();
     }
 
-    public List<EventListing> getUpcomingEvents(String city) {
-        LocalDate today = LocalDate.now();
-        if (city != null && !city.isBlank()) {
-            return eventListingRepository.findByStatusAndCityIgnoreCaseAndEventDateGreaterThanEqualOrderByEventDateAsc(ListingStatus.APPROVED, city.trim(), today);
-        }
-        return eventListingRepository.findByStatusAndEventDateGreaterThanEqualOrderByEventDateAsc(ListingStatus.APPROVED, today);
+    public EventListing getEventById(String id) {
+        return eventListingRepository.findById(id)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Event not found"));
+    }
+
+    public List<EventListing> getPendingEvents() {
+        return eventListingRepository.findAll().stream()
+                .filter(e -> e.getStatus() == ListingStatus.PENDING)
+                .collect(Collectors.toList());
+    }
+
+    public List<EventListing> getApprovedEvents() {
+        return eventListingRepository.findAll().stream()
+                .filter(e -> e.getStatus() == ListingStatus.APPROVED)
+                .collect(Collectors.toList());
     }
 
     public List<EventListing> getTopUpcomingEvents(int limit) {
-        List<EventListing> events = eventListingRepository.findByStatusAndEventDateGreaterThanEqualOrderByEventDateAsc(ListingStatus.APPROVED, LocalDate.now());
-        return events.stream().limit(limit).toList();
+        return getApprovedEvents().stream()
+                .limit(limit)
+                .collect(Collectors.toList());
     }
 
-    public List<EventListing> getEventsOrganizedBy(String username) {
-        return eventListingRepository.findByOrganizerUsernameOrderByCreatedAtDesc(username);
+    public List<EventListing> getUpcomingEvents(String username) {
+        return getApprovedEvents();
     }
 
-    public EventBooking bookTickets(String attendeeUsername, String eventId, String fullName, String email, String phone, int ticketCount) {
-        EventListing event = eventListingRepository.findById(eventId)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Event not found"));
+    public List<EventListing> getOrganizerEvents(String username) {
+        return eventListingRepository.findAll().stream()
+                .filter(e -> username.equals(e.getOrganizerUsername()))
+                .collect(Collectors.toList());
+    }
 
-        if (event.getAvailableSeats() < ticketCount) {
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Not enough seats available for this event.");
-        }
+    public EventListing createEvent(String username, EventListing event) {
+        event.setOrganizerUsername(username);
+        event.setStatus(ListingStatus.PENDING);
+        event.setCreatedAt(LocalDateTime.now());
+        return eventListingRepository.save(event);
+    }
 
-        BigDecimal unitPrice = event.getTicketPrice() != null ? event.getTicketPrice() : BigDecimal.ZERO;
-        BigDecimal totalAmount = unitPrice.multiply(BigDecimal.valueOf(ticketCount));
-
-        String refCode = "ASMJ-EVT-" + UUID.randomUUID().toString().substring(0, 8).toUpperCase();
-
+    public EventBooking bookEvent(String eventId, String username, int tickets, String attendeeName, String email, String phone) {
+        EventListing event = getEventById(eventId);
+        
         EventBooking booking = EventBooking.builder()
                 .eventId(eventId)
                 .eventTitle(event.getTitle())
-                .organizerUsername(event.getOrganizerUsername())
-                .attendeeUsername(attendeeUsername)
-                .attendeeFullName(fullName)
-                .attendeeEmail(email)
-                .attendeePhone(phone)
-                .numberOfTickets(ticketCount)
-                .totalAmount(totalAmount)
-                .bookingReference(refCode)
-                .status(EventBookingStatus.CONFIRMED)
-                .bookedAt(LocalDateTime.now())
+                .userId(username)
+                .numberOfTickets(tickets)
+                .customerName(attendeeName)
+                .customerEmail(email)
+                .customerPhone(phone)
+                .bookingDate(LocalDateTime.now())
                 .build();
 
         EventBooking savedBooking = eventBookingRepository.save(booking);
-
-        event.setBookedSeats(event.getBookedSeats() + ticketCount);
-        eventListingRepository.save(event);
-
-        // Notify organizer via integrated messaging
-        Conversation convo = directMessageService.getOrCreateDirectConversation(attendeeUsername, event.getOrganizerUsername());
-        String notification = String.format("Hi! I just booked %d ticket(s) for '%s' (Ref: %s). Looking forward to the event!",
-                ticketCount, event.getTitle(), refCode);
-        directMessageService.sendMessage(attendeeUsername, convo.getId(), notification, null);
+        
+        notificationService.sendNotification(event.getOrganizerUsername(), "New Event Booking",
+                attendeeName + " booked " + tickets + " ticket(s) for '" + event.getTitle() + "'.", "/events/manage");
 
         return savedBooking;
     }
 
-    public List<EventBooking> getBookingsForAttendee(String attendeeUsername) {
-        return eventBookingRepository.findByAttendeeUsernameOrderByBookedAtDesc(attendeeUsername);
+    public List<EventBooking> getUserBookings(String username) {
+        return eventBookingRepository.findAll().stream()
+                .filter(b -> username.equals(b.getUserId()))
+                .collect(Collectors.toList());
     }
 
-    public List<EventBooking> getBookingsForOrganizer(String organizerUsername) {
-        return eventBookingRepository.findByOrganizerUsernameOrderByBookedAtDesc(organizerUsername);
+    public List<EventBooking> getEventBookingsForOrganizer(String organizerUsername) {
+        List<String> organizerEventIds = getOrganizerEvents(organizerUsername).stream()
+                .map(EventListing::getId)
+                .toList();
+
+        return eventBookingRepository.findAll().stream()
+                .filter(b -> organizerEventIds.contains(b.getEventId()))
+                .collect(Collectors.toList());
+    }
+
+    public void deleteEvent(String id) {
+        eventListingRepository.deleteById(id);
+    }
+
+    public void moderateEvent(String eventId, boolean approve, String rejectionReason) {
+        EventListing event = getEventById(eventId);
+
+        if (approve) {
+            event.setStatus(ListingStatus.APPROVED);
+            event.setRejectionReason(null);
+            notificationService.sendNotification(event.getOrganizerUsername(), "Event Approved", 
+                    "Your event '" + event.getTitle() + "' has been approved and published.", "/events");
+        } else {
+            event.setStatus(ListingStatus.REJECTED);
+            event.setRejectionReason(rejectionReason);
+            notificationService.sendNotification(event.getOrganizerUsername(), "Event Rejected", 
+                    "Your event '" + event.getTitle() + "' was rejected. Reason: " + rejectionReason, "/events/manage");
+        }
+        eventListingRepository.save(event);
+    }
+
+    public void revokeEventApproval(String eventId, String rejectionReason) {
+        EventListing event = getEventById(eventId);
+
+        event.setStatus(ListingStatus.REJECTED);
+        event.setRejectionReason(rejectionReason);
+        eventListingRepository.save(event);
+
+        notificationService.sendNotification(event.getOrganizerUsername(), "Event Approval Revoked", 
+                "Your event '" + event.getTitle() + "' approval was revoked. Reason: " + rejectionReason, "/events/manage");
+    }
+    
+    public List<EventListing> getRejectedEvents() {
+        return eventListingRepository.findAll().stream()
+                .filter(e -> e.getStatus() == ListingStatus.REJECTED)
+                .collect(Collectors.toList());
     }
 }
+
